2008-08-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/attr.c: If ORA-01000 (maximum open cursors exceeded) when
	    converting a rowid descriptor to string representation, run
	    GC to cleanup unreferenced statement handles and try again.
	* ext/oci8/oci8.h, ext/oci8/oci8lib.c: add a utility function
	    oci8_exec_sql() to execute a SQL statement in C.
	* ext/oci8/encoding.c: use oci8_exec_sql() to run anonymous PL/SQL
	    blocks in oci8_charset_id2name() and oci8_charset_name2id().
	* ext/oci8/bind.c, ext/oci8/metadata.c, ext/oci8/ocidatetime.c,
	  ext/oci8/ocinumber.c: suppress compiler warnings.
	* ext/oci8/oci8.c: avoid "[BUG] object allocation during garbage
	    collection phase" when using ruby 1.9. In GC, just free a
	    session handle without rollback.

2008-08-02  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h, ext/oci8/ocidatetime.c, lib/oci8.rb.in,
	  lib/oci8/datetime.rb: change binding code for timestamps
	    and intervals. C side is a thin wrapper which converts Oracle's
	    date, timestamp and interval values to ruby arrays and vise
	    versa. Ruby side converts the arrays to ruby's Time, DateTime,
	    Integer (for interval year to month) and Rational (for interval
	    day to second).
	* lib/oci8/oci8.rb: change mapping for binding date, timestamp and
	    timestamp with local time zone from OCI8::BindType::DateTime
	    to OCI8::BindType::Time.
	* test/test_array_dml.rb, test/test_datetime.rb, test/test_dbi.rb,
	  test/test_oci8.rb: fix test cases for a change above.

2008-07-17  KUBO Takehiro  <kubo@jiubao.org>
	* Makefile: add a rdoc target to make rdoc document.
	* custom-rdoc.rb: add a file which customizes rdoc to handle 
	    oci8_define_class_under() and oci8_define_bind_class().
	* ext/oci8/.document: add a new file for rdoc.
	* ext/oci8/bind.c, ext/oci8/oci8.h: rename cOCIBind to cOCI8BindTypeBase,
	    which is same name used in custom-rdoc.rb.
	* ext/oci8/oci8.c, ext/oci8/ocidatetime.c, ext/oci8/ocinumber.c: