@@ -1,7 +1,7 @@
 # High-level API
 require 'oci8'
 require 'test/unit'
-require './config'
+require File.dirname(__FILE__) + '/config'
 
 class TestBreak < Test::Unit::TestCase
 
